api-gateway/sample-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: notesapp
spec:
  gatewayClassName: nginx
  listeners:
    - protocol: HTTP
      port: 80
      name: prod-web-gw
      allowedRoutes:
        namespaces:
          from: Same
