api-gateway/sample-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
  namespace: notesapp
spec:
  parentRefs:
    - name: prod-web
  rules:
    - backendRefs:
        - name: notesapp-fe-service
          port: 80
